Fix spacing for footer

--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,7 @@ body {
     font-family: "Lato", sans-serif;
 }
 
-div {
+.card {
     background-color: #FFFFFF;
     max-width: 25rem;
     margin: 15rem auto;
